# gameOfLifeCUDA

./: CMakeLists.txt  Documentation.md
code/: gtest.cpp  main.cpp
code/source/simulation/: DataSet.h  Dataset.cu  Simulation.cu  Simulation.h
code/tests/: DataSetTest.h  SimulationTest.h
